增删逻辑，修复原登出设置黑名单逻辑，配置swagger,jwt中间件，授权与验证相关逻辑集成在pkg/auth包下
